修改转盘活动